# vtjs

./: .gitignore  README.md  biome.json  electron-builder.yml  index.html  lockfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: build.yml  main.yml  merge_request.yml  test.yaml
scripts/: update-assets.ts
src/: App.css  App.tsx  global.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: auth.ts  base.ts  cache.ts  fetcher.ts  index.ts  local.dev.ts  local.ts  shared.dev.ts  shared.ts  store.ts
src/assets/: agents.json  maps.json  ranks.json  seasons.json
src/components/: Announcement.tsx  Header.tsx  MatchHandler.tsx  PenaltyAlert.tsx  PlayersTable.tsx  RateLimitAlert.tsx  ShortcutHandler.tsx  SocketListener.tsx  Splash.tsx  Sync.tsx  TestDial.tsx  index.ts
src/interface/: Pages.enum.ts  api.interface.ts  common.interface.ts  index.ts  local-client.ts  shared-api.ts  store-api.ts  utils.interface.ts  valorant-api.interface.ts
src/lib/: game-state.ts  match-processing.ts  services.tsx
src/main/: index.ts  utils.ts
src/pages/: AvoidList.page.tsx  Friends.page.tsx  Init.page.tsx  Main.page.tsx  Match.page.tsx  Player.page.tsx  PlayerDetails.page.tsx  Profile.page.tsx  Settings.page.tsx  Store.page.tsx  Test.page.tsx  Welcome.page.tsx
src/preload/: index.d.ts  (+1 more)
tests/: all.test.ts  api.test.ts  game-state.test.ts  match-processing.test.ts  setup.ts  utils.test.ts
(+45 files in other folders)
