[package]
name = "vtjs"
version = "0.2.1"
description = "VTJS"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vtjs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-websocket = "2"
tauri-plugin-http = { version = "2", features = ["dangerous-settings"] }
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["postgres", "sqlite"] }
once_cell = "1.21.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

tungstenite = { version = "0.21", default-features = false, features = ["native-tls", "handshake"] }
base64 = "0.21"
native-tls = "0.2"
url = "2"
